--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-#Mon Jul 31 12:42:35 GMT 2023
 micronaut.application.name=stackoverflowCli
+stackoverflow.api.url=https://api.stackexchange.com/2.3
+
+
+
